# tiago_ws

./: .gitignore  README.md
tiago_ws/src/cartesian_mover/: CMakeLists.txt  package.xml
tiago_ws/src/cartesian_mover/action/: ExecuteTask.action
tiago_ws/src/cartesian_mover/config/: pick_place_tasks.yaml  tiago_tasks.yaml
tiago_ws/src/cartesian_mover/include/cartesian_mover/: initial_pos.txt
tiago_ws/src/cartesian_mover/launch/: tiago_joint_space.launch.py
tiago_ws/src/cartesian_mover/src/: cartesian_path_planner.cpp  cartesian_planner.cpp  joint_space_scalable.cpp  joint_space_simple.cpp  pick_cube_node.cpp  pick_cube_node_untouched_copy.cpp  pick_cube_node_v1.cpp  task_executor_server.cpp
tiago_ws/src/head_action/: CMakeLists.txt  package.xml
tiago_ws/src/head_action/src/: point_frame.cpp
tiago_ws/src/launch_pal/launch_pal/robot_arguments/: __init__.py  common.py  common_tiago.py
tiago_ws/src/pal_gazebo_worlds/launch/: pal_gazebo_headless.launch.py
tiago_ws/src/pal_gazebo_worlds/worlds/: tabletop_cube.world
tiago_ws/src/play_motion2/play_motion2/: CMakeLists.txt
tiago_ws/src/pmb2_robot/pmb2_bringup/: CHANGELOG.rst  package.xml
tiago_ws/src/pmb2_robot/pmb2_bringup/config/twist_mux/: twist_mux_locks.yaml  twist_mux_topics.yaml
tiago_ws/src/pmb2_robot/pmb2_controller_configuration/: CHANGELOG.rst  package.xml
tiago_ws/src/pmb2_robot/pmb2_description/: CHANGELOG.rst  package.xml
tiago_ws/src/pmb2_robot/pmb2_robot/: CHANGELOG.rst  package.xml
tiago_ws/src/tiago_moveit_config/launch/: moveit_rviz.launch.py
tiago_ws/src/tiago_navigation/tiago_2dnav/: CMakeLists.txt
tiago_ws/src/tiago_navigation/tiago_2dnav/launch/: tiago_nav_bringup.launch.py
tiago_ws/src/tiago_navigation/tiago_2dnav/pal_maps/: local_setup.sh
tiago_ws/src/tiago_navigation/tiago_2dnav/pal_maps/cmake/: pal_mapsConfig.cmake
tiago_ws/src/tiago_navigation/tiago_2dnav/pal_maps/maps/empty/: map.yaml
tiago_ws/src/tiago_navigation/tiago_2dnav/pal_maps/maps/isaac_simple_room/: map.yaml
tiago_ws/src/tiago_robot/tiago_bringup/: CHANGELOG.rst  package.xml
tiago_ws/src/tiago_robot/tiago_bringup/config/twist_mux/: twist_mux_locks.yaml  twist_mux_topics.yaml
tiago_ws/src/tiago_robot/tiago_controller_configuration/: CHANGELOG.rst  package.xml
tiago_ws/src/tiago_robot/tiago_description/: CHANGELOG.rst  package.xml
tiago_ws/src/tiago_robot/tiago_description/robots/: tiago.urdf
tiago_ws/src/tiago_robot/tiago_robot/: CHANGELOG.rst  package.xml
tiago_ws/src/tiago_simulation/tiago_gazebo/launch/: tiago_nav.launch.py
tiago_ws/src/tiago_simulation/tiago_gazebo/scripts/: amcl_pose_logger.py
tiago_ws/src/tiago_simulation/tiago_gazebo/scripts/data_logger/: robot_pose.txt
